fix ul alignment

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -44,9 +44,9 @@ header a:hover, footer a:hover {
     box-shadow: 0 6px 16px rgba(0,0,0,.15); 
 }
 
-ul {
+ main ul {
     text-align: left;
-    display: inline-block;
+    
 }
 
 img {
